Adding simple examples for Reader, Writer and State